# blender

./: MODULE.bazel
connect/: BUILD
connect/common/: BUILD
connect/common/src/main/java/org/blab/blender/connect/common/: Buffer.java  MessageStream.java  MessageStreamConfiguration.java  MessageStreamConnector.java  MessageStreamTask.java
connect/common/src/main/resources/: org.blab.oneshot.avsc
connect/common/src/test/java/org/blab/blender/connect/common/: BufferTest.java
connect/mqtt/: BUILD
connect/mqtt/src/main/java/org/blab/blender/connect/mqtt/: MqttMessageStream.java  MqttSourceConfiguration.java  MqttSourceConnector.java  MqttSourceTask.java
connect/mqtt/src/main/resources/: default.properties
connect/river/common/: BUILD
connect/river/common/src/main/java/org/blab/blender/connect/river/: Buffer.java  Event.java  RiverClient.java  RiverConfiguration.java  RiverConnector.java  RiverLadesResolver.java  RiverTask.java
connect/river/mqtt/: BUILD
connect/river/mqtt/src/main/resources/: connect-mqtt-source.properties
connect/river/vcas/: BUILD
connect/vcas/: BUILD
connect/vcas/src/main/java/org/blab/blender/connect/vcas/: VcasMessageStream.java  VcasSourceConfiguration.java  VcasSourceConnector.java  VcasSourceTask.java
connect/vcas/src/main/resources/: default.properties
registry/: BUILD
registry/src/main/java/org/blab/blender/registry/: Error.java  Record.java  Registry.java  SchemaController.java  SchemaRepository.java
registry/src/main/resources/: application.properties  specs.yaml
(+10 files in other folders)
